Finally changed the layout from Relative to Table!  You can actually cut, paste, and move things without breaking the world.  Put placeholders in for the Fraction specific rare counters.

--- a/res/layout/activity_galdor_craft.xml
+++ b/res/layout/activity_galdor_craft.xml
@@ -1,172 +1,187 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".GaldorCraft" >
-
-    <EditText
-        android:id="@+id/txtLife"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignRight="@+id/imgBtnDecLife"
-        android:layout_alignTop="@+id/txtWood"
-        android:ems="10"
-        android:text="40"
-        android:textSize="36sp" android:password="false" android:phoneNumber="false"
-        android:layout_alignBottom="@+id/txtWood"/>
-
-    <ImageButton
-        android:id="@+id/imgBtnDecLife"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_above="@+id/txtLife"
-        android:layout_alignParentLeft="true"
-        android:src="@drawable/life_dec" />
-
-    <ImageButton
-        android:id="@+id/imgBtnIncLife"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:src="@drawable/life_inc" android:layout_alignLeft="@+id/txtLife"
-        android:layout_below="@+id/imgBtnResetLife"/>
-
-    <ImageButton
-        android:id="@+id/imgBtnResetLife"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:src="@drawable/label_life" android:focusable="false"/>
-
-    <ImageButton
-        android:id="@+id/imgBtnResetWood"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_alignBottom="@+id/imgBtnResetLife"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/imgBtnResetLife"
-        android:src="@drawable/gc_wood" android:longClickable="false"/>
-
-    <ImageButton
-        android:id="@+id/imgBtnIncWood"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_alignLeft="@+id/imgBtnResetWood"
-        android:layout_below="@+id/imgBtnResetWood"
-        android:src="@drawable/life_inc" />
-
-    <ImageButton
-        android:id="@+id/imgBtnDecWood"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_alignLeft="@+id/imgBtnIncWood"
-        android:layout_below="@+id/imgBtnIncWood"
-        android:src="@drawable/life_dec" />
-
-    <EditText
-        android:id="@+id/txtWood"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:ems="10"
-        android:text="0"
-        android:textSize="36sp" android:layout_toRightOf="@+id/imgBtnDecLife"
-        android:layout_below="@+id/imgBtnDecWood"/>
-
-    <ImageButton
-        android:id="@+id/imgBtnResetOre"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_alignBottom="@+id/imgBtnResetWood"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/imgBtnResetWood"
-        android:src="@drawable/gc_ore" android:focusableInTouchMode="false"/>
-
-    <ImageButton
-        android:id="@+id/imgBtnIncOre"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_above="@+id/imgBtnDecWood"
-        android:layout_alignLeft="@+id/imgBtnResetOre"
-        android:src="@drawable/life_inc" />
-
-    <ImageButton
-        android:id="@+id/imgBtnDecOre"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_alignLeft="@+id/imgBtnIncOre"
-        android:layout_below="@+id/imgBtnIncOre"
-        android:src="@drawable/life_dec" />
-
-    <EditText
-        android:id="@+id/txtOre"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:ems="10"
-        android:text="0"
-        android:textSize="36sp" android:layout_toRightOf="@+id/imgBtnResetWood" android:layout_below="@+id/imgBtnDecWood"/>
-
-    <ImageButton
-        android:id="@+id/imgBtnResetRare"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/imgBtnResetOre"
-        android:src="@drawable/gc_rare" android:focusableInTouchMode="false"/>
-
-    <ImageButton
-        android:id="@+id/imgBtnIncRare"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:src="@drawable/life_inc"
-        android:layout_toRightOf="@+id/imgBtnResetOre" android:layout_alignTop="@+id/imgBtnIncLife"/>
-
-    <ImageButton
-        android:id="@+id/imgBtnDecRare"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:src="@drawable/life_dec"
-        android:layout_toRightOf="@+id/imgBtnResetOre" android:layout_below="@+id/imgBtnIncLife"/>
-
-    <EditText
-        android:id="@+id/txtRare"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:ems="10"
-        android:text="0"
-        android:textSize="36sp" android:layout_toRightOf="@+id/imgBtnResetOre" android:layout_below="@+id/imgBtnDecWood"/>
-    <ImageButton
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:id="@+id/imgBtnResetGame"
-            android:src="@drawable/turn_counter"
-            android:layout_toRightOf="@+id/imgBtnResetRare" android:layout_alignTop="@+id/imgBtnResetLife"
-            android:longClickable="false"/>
-    <ImageButton
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:id="@+id/imgBtnIncTurn"
-            android:layout_toRightOf="@+id/imgBtnResetRare" android:layout_alignTop="@+id/imgBtnIncLife"
-            android:layout_alignRight="@+id/imgBtnResetGame" android:src="@drawable/life_inc"/>
-    <EditText
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:text="0"
-            android:id="@+id/txtTurnCount" android:layout_toRightOf="@+id/imgBtnResetRare"
-            android:layout_alignTop="@+id/txtLife" android:textSize="36sp"/>
-    <Chronometer
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:id="@+id/chronoTurnTime"
-            android:textSize="15dp"
-            android:layout_toRightOf="@+id/imgBtnResetRare" android:layout_alignTop="@+id/imgBtnDecLife"
-            android:textStyle="bold"
-            android:paddingLeft="12dp" android:paddingTop="26dp"/>
-    <Chronometer
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:id="@+id/chronoGameTime"
-            android:layout_toRightOf="@+id/imgBtnResetRare" android:layout_alignTop="@+id/imgBtnDecLife"
-            android:paddingLeft="12dp" android:paddingTop="10dp" android:textSize="15dp" android:textStyle="bold"/>
-
-</RelativeLayout>
+<TableLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="horizontal">
+    <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+        <ImageButton
+                android:id="@+id/imgBtnResetLife"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:src="@drawable/label_life"
+                android:layout_column="0"/>
+        <ImageButton
+                android:id="@+id/imgBtnResetWood"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:src="@drawable/gc_wood"
+                android:layout_column="1"/>
+        <ImageButton
+                android:id="@+id/imgBtnResetOre"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:src="@drawable/gc_ore"
+                android:layout_column="2"/>
+        <ImageButton
+                android:id="@+id/imgBtnResetRare"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:src="@drawable/gc_rare"
+                android:layout_column="3"/>
+        <ImageButton
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:id="@+id/imageButton4" android:layout_column="4"/>
+        <ImageButton
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:id="@+id/imgBtnResetGame"
+                android:src="@drawable/turn_counter"
+                android:longClickable="true"
+                android:layout_column="5"/>
+    </TableRow>
+    <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+        <ImageButton
+                android:id="@+id/imgBtnIncLife"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:src="@drawable/life_inc"
+                android:layout_column="0"/>
+        <ImageButton
+                android:id="@+id/imgBtnIncWood"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:src="@drawable/life_inc"
+                android:layout_column="1"/>
+        <ImageButton
+                android:id="@+id/imgBtnIncOre"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:src="@drawable/life_inc"
+                android:layout_column="2"/>
+        <ImageButton
+                android:id="@+id/imgBtnIncRare"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:src="@drawable/life_inc"
+                android:layout_column="3"/>
+        <ImageButton
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:id="@+id/imageButton10" android:layout_column="4"
+                android:contentDescription="@string/increment_normal_rare"/>
+        <ImageButton
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:id="@+id/imgBtnIncTurn"
+                android:src="@drawable/life_inc"
+                android:layout_column="5"
+                android:contentDescription="@string/increment_fracture_rare"/>
+    </TableRow>
+    <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+        <ImageButton
+                android:id="@+id/imgBtnDecLife"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:src="@drawable/life_dec"
+                android:layout_column="0"/>
+        <ImageButton
+                android:id="@+id/imgBtnDecWood"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:src="@drawable/life_dec"
+                android:layout_column="1"/>
+        <ImageButton
+                android:id="@+id/imgBtnDecOre"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:src="@drawable/life_dec"
+                android:layout_column="2"/>
+        <ImageButton
+                android:id="@+id/imgBtnDecRare"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:src="@drawable/life_dec"
+                android:layout_column="3"/>
+        <ImageButton
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:id="@+id/imageButton16"
+                android:layout_column="4"/>
+        <RelativeLayout
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:layout_column="5">
+            <Chronometer
+                    android:id="@+id/chronoTurnTime"
+                    android:textSize="15dp"
+                    android:textStyle="bold"
+                    android:layout_width="64dp"
+                    android:layout_height="64dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:paddingLeft="12dp"
+                    android:paddingTop="26dp"/>
+            <Chronometer
+                    android:id="@+id/chronoGameTime"
+                    android:textSize="15dp"
+                    android:textStyle="bold"
+                    android:layout_width="64dp"
+                    android:layout_height="64dp"
+                    android:layout_alignLeft="@+id/chronoTurnTime"
+                    android:layout_alignTop="@+id/chronoTurnTime"
+                    android:paddingLeft="12dp"
+                    android:paddingTop="10dp"/>
+        </RelativeLayout>
+    </TableRow>
+    <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+        <EditText
+                android:id="@+id/txtLife"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:ems="10"
+                android:text="40"
+                android:layout_column="0" android:textSize="36dp"/>
+        <EditText
+                android:id="@+id/txtWood"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:ems="10"
+                android:text="0"
+                android:layout_column="1" android:textSize="36dp"/>
+        <EditText
+                android:id="@+id/txtOre"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:ems="10"
+                android:text="0"
+                android:layout_column="2" android:textSize="36dp"/>
+        <EditText
+                android:id="@+id/txtRare"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:ems="10"
+                android:text="0"
+                android:layout_column="3" android:textSize="36dp"/>
+        <EditText
+                android:id="@+id/txtFracRare"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:ems="10"
+                android:text="0"
+                android:layout_column="4" android:textSize="36dp"/>
+        <EditText
+                android:id="@+id/txtTurnCount"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:text="0"
+                android:layout_column="5" android:textSize="36dp"/>
+    </TableRow>
+</TableLayout>
